--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kooyooman.github.io/autoschedule",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "immutable": "^4.0.0-rc.12",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "axios": "^0.19.2",
+    "gh-pages": "^2.2.0",
     "react-component-export-image": "^0.1.4"
   }
 }
