--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "gh-pages": "^2.2.0",
+    "googleapis": "^51.0.0",
+    "open": "^7.0.4",
     "react-component-export-image": "^0.1.4",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "server-destroy": "^1.0.1"
   }
 }
